# rpi_arm_composites_manufacturing

./: README.md  package.xml  package.xml.autosave  rpi_arm_composites_manufacturing.rosinstall
launch/: run.launch
rpi_arm_composites_manufacturing/: CMakeLists.txt
rpi_arm_composites_manufacturing/launch/: run.launch
rpi_arm_composites_manufacturing_gui/: README.md
rpi_arm_composites_manufacturing_gui/resource/: Runscreen.ui
rpi_arm_composites_manufacturing_gui/src/rpi_arm_composites_manufacturing_gui/: execute_gui_steps.py  experiment_gui_module.py  panel_selector_window.py  panel_selector_window_enlarged.py  rviz_starter.py  user_authentication_window.py
rpi_arm_composites_manufacturing_process/: CMakeLists.txt  README.md  package.xml  setup.py
rpi_arm_composites_manufacturing_process/action/: ProcessStep.action
rpi_arm_composites_manufacturing_process/config/: leeward_mid_panel_marker_transform.yaml  leeward_tip_panel_marker_transform.yaml  panel_pickup.json  panel_placement.json  reposition_robot.json  reposition_robot_short.json  reposition_robot_smoother.json  transport_panel.json  transport_panel_short.json  transport_panel_smoother.json
rpi_arm_composites_manufacturing_process/launch/: tesseract.rviz  tesseract_rviz.launch
rpi_arm_composites_manufacturing_process/msg/: ProcessState.msg
rpi_arm_composites_manufacturing_process/scripts/: pick_and_place_panel  pick_and_place_panel_client  process_controller_server
rpi_arm_composites_manufacturing_process/src/arm_composites_manufacturing_process/: __init__.py  arm_composites_manufacturing_process.py  generate_placement_action.py  planner.py  process_controller_server.py
rpi_arm_composites_manufacturing_process/srv/: GetProcessState.srv
