<?xml version="1.0"?>
<package format="2">
  <name>rpi_arm_composites_manufacturing</name>
  <version>0.0.0</version>
  <description>The rpi_arm_composites_manufacturing master package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wason@wasontech.com">John Wason</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rpi_arm_composites_manufacturing</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rpi_abb_irb6640_180_255_moveit_config</depend>
  <depend>rpi_abb_irb6640_180_255_support</depend>
  <depend>rpi_abb_irc5</depend>
  <depend>rpi_arm_composites_manufacturing_abb_egm_controller</depend>
  <depend>rpi_arm_composites_manufacturing_process</depend>
  <depend>rpi_arm_composites_manufacturing_testbed</depend>
  <depend>rpi_arm_composites_manufacturing_testbed_moveit_config</depend>
  <depend>rpi_ati_net_ft</depend>
  <depend>rpi_general_robotics_toolbox_py</depend>
  <depend>rviz_camera_stream</depend>
  <depend>tesseract</depend>
  <depend>trajopt_ros</depend>
  <depend>floating_transform_publisher</depend>
  <depend>rpi_arm_composites_manufacturing_gui</depend>
  <depend>tesseract_monitoring</depend>
  <!-- TODO: add camera and tracking software package depend -->   

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
